Fix column spacing

--- a/CoreHistogramView/src/au/gov/asd/tac/constellation/views/histogram/rewrite/histogram-view.css
+++ b/CoreHistogramView/src/au/gov/asd/tac/constellation/views/histogram/rewrite/histogram-view.css
@@ -26,7 +26,7 @@
 }
 
 .label:barBinCount {
-    -fx-padding: 0 2em 0 0;
+    -fx-padding: 0 1em 0 0;
 }
 
 .header-row{
